# eventos2

./: .coveragerc  .dockerignore  .editorconfig  .env.sample  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  app.yaml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .env.sample  .flake8  manage.py  pyproject.toml  pytest.ini
backend/backend/: settings.py  urls.py
backend/core/: admin.py  router.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_event_logo.py  0002_image.py
backend/core/models/: __init__.py  event.py  image.py
backend/eventos2/: manage.py  settings.py  urls.py  wsgi.py
backend/eventos2/core/: admin.py  predicates.py  router.py  rules.py  serializers.py  views.py
backend/eventos2/core/migrations/: 0002_unique_email.py  0004_event_slug.py  0006_eventregistrationtype_event.py  0007_registration_fix_relation.py
backend/eventos2/core/models/: __init__.py  event.py  soft_deletion.py  user.py
backend/eventos2/core/serializers/: __init__.py  event.py  event_registration.py  event_registration_type.py  user.py
backend/eventos2/core/services/: event.py  event_registration_type.py
backend/eventos2/core/views/: __init__.py  event.py  event_registration.py  event_registration_type.py  user.py
backend/eventos2/images/: admin.py  models.py  router.py  views.py
backend/eventos2/images/migrations/: 0001_initial.py
backend/eventos2/utils/: exceptions.py
backend/images/: router.py  serializers.py  urls.py  views.py
backend/images/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_backend.py
backend/tests/integration/: test_event.py  test_event_registration_types.py
backend/tests/unit/core/services/: test_event.py  test_event_registration.py  test_event_registration_type.py
backend/tests/unit/utils/permissions/: test_per_action_permissions.py
docker/: Dockerfile.backend  Dockerfile.frontend  backend.checks  backend.dockerfile  frontend.dockerfile  nginx.conf
docker/production/: frontend.checks  frontend.nginx.conf.sigil
eventos2/: README.md  settings.py  urls.py
eventos2/core/: admin.py  predicates.py  router.py  rules.py
eventos2/images/: models.py  serializers.py
eventos2/media/: admin.py  models.py  router.py  serializers.py  views.py
eventos2/utils/: files.py  metadata.py  permissions.py  viewsets.py
frontend/: .eslintrc.js  README.md  app.yaml  nuxt.config.js  package-lock.json  package.json  vue.config.js
frontend/api/: activity.js  activityRegistration.js  document.js  event.js  eventRegistration.js  eventRegistrationType.js  exceptions.js  index.js  submission.js  track.js  trackReviewQuestion.js  trackSubmissionDocumentSlot.js  user.js  utils.js
frontend/assets/: global.scss
frontend/components/: EDatetimepicker.vue  EInput.vue  ERadioCard.vue  ERadioGroup.vue  ESelect.vue  EStatusIcon.vue  EUpload.vue  EUserSearch.vue  EventosAdminMenu.vue  EventosFooter.vue  EventosNavbar.vue  LanguagePickerFooter.vue  LinksMenu.vue
frontend/layouts/: admin.vue  default.vue  error.vue
frontend/mixins/: errorMixin.js
frontend/pages/: index.vue  login.vue  register.vue  signup.vue  userEventRegistration.vue  userSettings.vue
frontend/plugins/: api.js  auth.js  axios.js  dayjs.js  i18n.js  vee-validate.js  visibility.js
frontend/src/: App.vue  i18n.js  router.js
frontend/store/: admin.js  index.js
frontend/utils/: dayjs.js  url.js
tests/: conftest.py
tests/integration/: test_activity.py  test_activity_registration.py  test_event.py  test_event_registration.py  test_review.py  test_review_request.py  test_soft_deletion.py  test_submission.py  test_submission_document.py  test_track.py  test_track_review_question.py  (+2 more)
(+108 files in other folders)
