[tool.poetry]
name = "eventos2"
version = "0.1.0"
description = ""
authors = [
	"yurihs <yurisalvador@hotmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
Django = "^4.0"
django-environ = "^0.8.1"
djangorestframework = "^3.13.0"
psycopg2-binary = "^2.9.2"
packaging = "^21.3"
Pillow = "^8.4.0"
gunicorn = "^20.1.0"
huey = "^2.4.2"
redis = "^4.0.2"
sentry-sdk = "^1.5.1"
rules = "^3.0"
pytest-django = "^4.5.2"
djangorestframework-simplejwt = "^5.0.0"
python-magic = "^0.4.24"
drf-spectacular = "^0.21.0"
django-cors-headers = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
toml = "^0.10.2"
flake8-bugbear = "^21.11.29"
isort = "^5.10.1"
bandit = "^1.7.1"
pytest-cov = "^3.0.0"
pytest-freezegun = "^0.4.2"
python-dateutil = "^2.8.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
